Update and rename 2nd-Challenge.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="/lib/img/favicon-32x32.png"> 
-  <link rel="stylesheet" href="/lib/css/2nd-Challenge.css"> 
+  <link rel="icon" type="image/png" sizes="32x32" href="./lib/img/favicon-32x32.png"> 
+  <link rel="stylesheet" href="./lib/css/2nd-Challenge.css"> 
   <title>profile card</title>
 </head>
 <body>
   <div class="container">
     <div class="card">
-      <img src="/lib/img/bg-pattern-card.svg" alt="bg-pattern-card">
+      <img src="./lib/img/bg-pattern-card.svg" alt="bg-pattern-card">
       <div class="content">
-        <img src="/lib/img/image-victor.jpg" alt="profile-image">
+        <img src="./lib/img/image-victor.jpg" alt="profile-image">
         <h2>Victor Crest <span>26</span></h2>
         <p>London</p>
         <div class="footer">
